codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__workflow_monitor__tests__workflow_stop_selected_running_footer.snap
---
source: tui/src/chatwidget/workflow_monitor_tests.rs
expression: "rendered(&chat.workflow_monitor, 90)"
---
› ◆ Workflow release-check  run-stop  running · elapsed ≥ 5s
  0 tokens · 0 tools
  ● verify · 0/1 agents · elapsed ≥ 4s
    └─ ● verifier  gpt-5.5 · high  running · attempt 1 · ≥0ms

  ↑↓ choose run/agent · x stop workflow · p pause · Enter inspect agents · Esc exit
